fix: super productivity getting cut off for project switcher

--- a/src/app/main-header/main-header.component.scss
+++ b/src/app/main-header/main-header.component.scss
@@ -27,7 +27,7 @@ $mobileHorizontalPadding: 8px;
     text-overflow: ellipsis;
     white-space: nowrap;
     display: inline-block;
-    max-width: 200px;
+    max-width: 220px;
   }
 }
 
